tests/NormalTests/paczka1/small_fuzzy/78753992.err
Error in line 3: oxzqux A623 14,3
Error in line 10: nT5ROBCS A7]7 76,]
Error in line 12: nT5ROBCS A737 64,9
